@@ -539,6 +539,8 @@ Tests
 Build
 -----
 
+- Issue #17031: Fix running regen in cross builds.
+
 - Issue #3754: fix typo in pthread AC_CACHE_VAL.
 
 - Issue #15484: Fix _PYTHON_PROJECT_BASE for srcdir != builddir builds;
